# ntac

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  seeded_example.html  unseeded_example.html
.doctrees/: api.doctree  environment.pickle  index.doctree  seeded_example.doctree  unseeded_example.doctree
.github/workflows/: ci.yml  deploy.yml
docs/source/: conf.py
examples/: flywire_test.py
src/ntac/: __init__.py  data.py  graph_data.py  ntac.py  visualizer.py
src/ntac/seeded/: graph_data.py  seeded.py
src/ntac/unseeded/: __init__.py  convert.py  problem.py  seeded.py  unseeded.py  util.py  utilgpu.py
tests/: dummy_test.py  test_seeded_example.py  test_unseeded_example.py
