[project]
name = "ntac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Jourdan", email = "ben@jourdan.me" }
]
requires-python = ">=3.10"
dependencies = [
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "furo",
    "pre-commit>=4.2.0",
    "pytest",
    "ruff",
    "sphinx",
    "twine",
]

[project.scripts]
ntac = "ntac:main"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E501", "D203", "D213", "D210", "D401", "D202", "I001"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
